# CrazyMapper

./: .gitignore  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  DELIVERY_SUMMARY.md  FILE_INDEX.md  IMPLEMENTATION_CHECKLIST.md  QUICKSTART.md  README.md
assets/: CrazyMapper.desktop
include/core/: application.hpp  projection_window.hpp  types.hpp
include/gl/: framebuffer.hpp  mesh.hpp  shader_program.hpp  texture.hpp
include/layers/: ellipse_shape.hpp  layer.hpp  polygon_shape.hpp  rectangle_shape.hpp  rounded_rectangle_shape.hpp  shape.hpp  triangle_shape.hpp
include/math/: homography.hpp
include/sources/: color_pattern_source.hpp  image_file_source.hpp  pipewire_node_enumerator.hpp  pipewire_source.hpp  portal_screencast.hpp  shader_source.hpp  source.hpp  video_file_source.hpp
include/ui/: file_dialog.hpp  input_space_view.hpp  output_space_view.hpp  ui_manager.hpp
shaders/: README.md  perspective.frag  procedural.frag  quad.vert
shaders/examples/: README.md  bricks.glsl  clouds.glsl  plasma.glsl  rings.glsl  starfield.glsl
src/: main.cpp
src/core/: application.cpp  projection_window.cpp
src/gl/: framebuffer.cpp  mesh.cpp  shader_program.cpp  texture.cpp
src/layers/: ellipse_shape.cpp  layer.cpp  polygon_shape.cpp  rectangle_shape.cpp  rounded_rectangle_shape.cpp  triangle_shape.cpp
src/math/: homography.cpp
src/sources/: color_pattern_source.cpp  image_file_source.cpp  pipewire_node_enumerator.cpp  pipewire_source.cpp  portal_screencast.cpp  shader_source.cpp  video_file_source.cpp
src/ui/: file_dialog.cpp  input_space_view.cpp  output_space_view.cpp  ui_manager.cpp
